@@ -1,8 +1,8 @@
 Package: crlmm
 Type: Package
 Title: Genotype Calling (CRLMM) and Copy Number Analysis tool for Affymetrix SNP 5.0 and 6.0 and Illumina arrays.
-Version: 1.5.20
-Date: 2009-12-24
+Version: 1.5.21
+Date: 2010-01-20
 Author: Rafael A Irizarry, Benilton S Carvalho <bcarvalh@jhsph.edu>, Robert Scharpf <rscharpf@jhsph.edu>, Matt Ritchie <mritchie@wehi.edu.au>
 Maintainer: Benilton S Carvalho <bcarvalh@jhsph.edu>, Robert Scharpf <rscharpf@jhsph.edu>, Matt Ritchie <mritchie@wehi.EDU.AU>
 Description: Faster implementation of CRLMM specific to SNP 5.0 and 6.0 arrays, as well as a copy number tool specific to 5.0, 6.0, and Illumina platforms
@@ -22,4 +22,4 @@ Collate: AllGenerics.R
          utils.R
          zzz.R
 LazyLoad: yes
-biocViews: Microarray, Preprocessing, SNP, Bioinformatics
+biocViews: Microarray, Preprocessing, SNP, Bioinformatics, CopyNumberVariants
