@@ -362,3 +362,7 @@ is decoded and scanned
 2009-12-24 M. Ritchie - committed version 1.5.19
 
  * Added 'humanomni1quadv1b" to chip types allowed in RGtoXY()
+
+
+2010-01-20 R. Scharpf - committed version 1.5.21
+ * Added CopyNumberVariants to DESCRIPTION
